--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <li class="nav-item"><a href="fleet.html" class="nav-link">Fleet</a></li>
                 <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link active">Contact</a></li>
             </ul>
             <a href="fleet.html" class="nav-cta">Book Now</a>
             <div class="hamburger">
