--- a/fleet.html
+++ b/fleet.html
@@ -33,7 +33,7 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="fleet.html" class="nav-link">Fleet</a></li>
+                <li class="nav-item"><a href="fleet.html" class="nav-link active">Fleet</a></li>
                 <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
