--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </svg>
             </a>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="fleet.html" class="nav-link">Fleet</a></li>
                 <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
