--- a/fleet-management.html
+++ b/fleet-management.html
@@ -14,7 +14,6 @@
     <header class="header scrolled">
         <nav class="navbar">
             <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
-                <!-- === THIS IS THE CORRECTED SVG === -->
                 <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
                     <!-- Icon: Steering Wheel -->
                     <g transform="translate(25, 25)">
@@ -52,11 +51,12 @@
                         <th>Car Name</th>
                         <th>Type</th>
                         <th>Price/Day</th>
+                        <th>Stock</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="cars-tbody">
-                    <tr><td colspan="5" class="loading-row">Loading fleet...</td></tr>
+                    <tr><td colspan="6" class="loading-row">Loading fleet...</td></tr>
                 </tbody>
             </table>
         </div>
@@ -80,7 +80,6 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <!-- === THIS IS THE UPDATED PART === -->
                     <div class="form-group">
                         <label for="car-type-select">Type</label>
                         <select id="car-type-select" required>
@@ -91,7 +90,6 @@
                         <label for="car-type-new">New Car Type</label>
                         <input type="text" id="car-type-new">
                     </div>
-                    <!-- === END OF UPDATED PART === -->
                     <div class="form-group">
                         <label for="car-price">Price per Day (₹)</label>
                         <input type="number" id="car-price" required>
@@ -107,13 +105,19 @@
                         <input type="number" id="car-luggage" required>
                     </div>
                 </div>
-                 <div class="form-group">
-                    <label for="car-transmission">Transmission</label>
-                    <select id="car-transmission" required>
-                        <option value="Automatic">Automatic</option>
-                        <option value="Manual">Manual</option>
-                    </select>
-                </div>
+                 <div class="form-row">
+                    <div class="form-group">
+                        <label for="car-transmission">Transmission</label>
+                        <select id="car-transmission" required>
+                            <option value="Automatic">Automatic</option>
+                            <option value="Manual">Manual</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="car-stock">Stock</label>
+                        <input type="number" id="car-stock" required min="0" value="1">
+                    </div>
+                 </div>
                 <div class="form-group">
                     <label for="car-image">Image URL</label>
                     <input type="url" id="car-image" required>
