--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,6 @@
     <header class="header scrolled">
         <nav class="navbar">
             <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
-                <!-- === THIS IS THE CORRECTED SVG === -->
                 <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
                     <!-- Icon: Steering Wheel -->
                     <g transform="translate(25, 25)">
@@ -50,15 +49,55 @@
                         <th>Total Cost</th>
                         <th>Booking Date</th>
                         <th>Status</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="bookings-tbody">
-                    <!-- The loading row colspan is now 6 -->
-                    <tr><td colspan="6" class="loading-row">Loading bookings...</td></tr>
+                    <tr><td colspan="7" class="loading-row">Loading bookings...</td></tr>
                 </tbody>
             </table>
         </div>
     </main>
+
+    <!-- === NEW MODAL FOR EDITING A BOOKING === -->
+    <div id="booking-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <h2 id="booking-modal-title">Edit Booking</h2>
+            <form id="booking-edit-form">
+                <input type="hidden" id="booking-db-id">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="booking-user-name">Customer Name</label>
+                        <input type="text" id="booking-user-name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="booking-user-email">Customer Email</label>
+                        <input type="email" id="booking-user-email" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="booking-start-date">Start Date</label>
+                        <input type="date" id="booking-start-date" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="booking-end-date">End Date</label>
+                        <input type="date" id="booking-end-date" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="booking-location">Pickup Location</label>
+                    <select id="booking-location-select" required>
+                        <!-- Location options will be populated by JavaScript -->
+                    </select>
+                </div>
+                <div class="modal-actions">
+                    <button type="button" id="booking-cancel-btn" class="btn-secondary">Cancel</button>
+                    <button type="submit" class="btn-primary-full">Save Changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script src="admin.js"></script>
 </body>
